# cNFT-candy-machine

./: .gitignore  Anchor.toml  package.json  readme.MD
programs/cnft-candy-machine/: Cargo.toml
programs/cnft-candy-machine/src/: errors.rs  lib.rs
programs/cnft-candy-machine/src/instructions/: allow_list.rs  create_collection.rs  initialize.rs  mint.rs  mod.rs  set_tree_status.rs
programs/cnft-candy-machine/src/state/: config.rs
tests/: cnft-candy-machine.ts
