[package]
name = "cnft-candy-machine"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cnft_candy_machine"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
mpl-bubblegum = "1.4.0"
spl-account-compression = { version = "0.3.0", features = ["no-entrypoint"] }
spl-noop = "0.2.0"
solana-program = "1.18.17"
